Finish and Have Splash Screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Traffic</string>
+    <string name="app_name">ป้ายจราจร</string>
 
     <string name="title">ป้ายจราจร</string>
 </resources>
